--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@chatui/core": "^2.4.2",
     "@pansy/react-amap": "^2.15.6",
     "@testing-library/jest-dom": "^5.16.5",
