--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # .env
-REACT_APP_USER_API_URL=http://mcc-be-user-service:5000/
-REACT_APP_CHAT_API_URL=http://mcc-be-chat-service:5000/
+# REACT_APP_USER_API_URL=http://mcc-be-user-service:5000/
+# REACT_APP_CHAT_API_URL=http://mcc-be-chat-service:5000/
 
-# REACT_APP_USER_API_URL=http://101.133.165.164:5000/
-# REACT_APP_CHAT_API_URL=http://49.234.53.27:5000/
+REACT_APP_USER_API_URL=http://101.133.165.164:5000/
+REACT_APP_CHAT_API_URL=http://49.234.53.27:5000/
